--- a/src/API/UniIdentity.Application/UniIdentity.Application.csproj
+++ b/src/API/UniIdentity.Application/UniIdentity.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\UniIdentity.Domain\UniIdentity.Domain.csproj" />
     </ItemGroup>
 
 </Project>
