--- a/src/API/UniIdentity.Infrastructure/UniIdentity.Infrastructure.csproj
+++ b/src/API/UniIdentity.Infrastructure/UniIdentity.Infrastructure.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Application\Application.csproj" />
-      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\UniIdentity.Application\UniIdentity.Application.csproj" />
+      <ProjectReference Include="..\UniIdentity.Domain\UniIdentity.Domain.csproj" />
     </ItemGroup>
 
 </Project>
