--- a/src/API/UniIdentity.Application/UniIdentity.Application.csproj
+++ b/src/API/UniIdentity.Application/UniIdentity.Application.csproj
@@ -10,4 +10,11 @@
       <ProjectReference Include="..\UniIdentity.Domain\UniIdentity.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.28" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
