--- a/src/API/UniIdentity.WebApp/appsettings.json
+++ b/src/API/UniIdentity.WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Port=5434;Database=Identity;User Id=admin;Password=admin1234;"
+  },
   "AllowedHosts": "*"
 }
