--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,19 +1,16 @@
 version: '3.4'
 
 services:
-  webapi:
-    container_name: webapi
+  uniidentity.webapp:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:Default=Server=unitagram.db;Database=UniIdentityDb;User Id=admin;Password=admin1234"
+      - "ConnectionStrings:Default=Server=uniidentity.db;Database=UniIdentityDb;User Id=admin;Password=admin1234"
     ports:
       - "6000:80"
-    depends_on: 
-      - uniidentity.db
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
-      
+
   uniidentity.db:
     container_name: uniidentity.db
     environment:
