--- a/src/API/UniIdentity.WebApp/appsettings.json
+++ b/src/API/UniIdentity.WebApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5434;Database=Identity;User Id=admin;Password=admin1234;"
+    "Default": "Server=localhost;Port=5435;Database=UniIdentityDb;User Id=admin;Password=admin1234;"
   },
   "AllowedHosts": "*"
 }
