add common project, add common to domain project and TokenStringArrayConverter

--- a/src/API/UniIdentity.Domain/UniIdentity.Domain.csproj
+++ b/src/API/UniIdentity.Domain/UniIdentity.Domain.csproj
@@ -14,4 +14,8 @@
       <Folder Include="Realms\ValueObjects\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UniIdentity.Common\UniIdentity.Common.csproj" />
+    </ItemGroup>
+
 </Project>
